# s3fs-fuse-awscred-lib

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  awscred.cpp  awscred.h  awscred_func.cpp  awscred_func.h  awscred_test.cpp  config.h.in  make_version_files.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  linux-ci-helper.sh  s3fsawscred_test.result
contrib/: Makefile  README.md  build-ubuntu.Dockerfile
